<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/Events"
            android:icon="@drawable/mainpage"
            android:title="Events"/>

        <item
            android:id="@+id/MyEvents"
            android:icon="@drawable/myevents"
            android:title="Created Events"/>

        <item
            android:id="@+id/Notifications"
            android:icon="@drawable/newevent"
            android:title="Create Event"/>

        <item
            android:id="@+id/Profile"
            android:icon="@drawable/profile"
            android:title="Profile"/>
    </group>

</menu>